centjes-gen/test_resources/balance/error/BE_ACCOUNT_TYPE_ASSERTION.cent
currency USD 0.01

account assets
account income

2023-12-21
  | Wrong way around, but still balanced
  * assets -1 USD
  * income +1 USD
